<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/Welcome"
        android:textColor="@color/blue_163297"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imgBack"
        app:layout_constraintTop_toBottomOf="@+id/imgBack" />

    <TextView
        android:id="@+id/txtSigninToContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signin_to_continue"
        android:textColor="@color/blue_7B9CE9"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="750px"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:textColor="@color/blue_617AD2"
        android:textColorHint="@color/blue_617AD2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtSigninToContinue"
        app:layout_constraintTop_toBottomOf="@+id/txtSigninToContinue"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:textColor="@color/blue_617AD2"
        android:textColorHint="@color/blue_617AD2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="700px"
        android:layout_height="130px"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue_042CE3"
        android:hapticFeedbackEnabled="false"
        android:text="@string/Login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Forgot_password"
        android:textColor="@color/blue_163297"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/imgLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"
        app:srcCompat="@drawable/ic_baseline_remove_left_24" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgline1"
        app:layout_constraintStart_toEndOf="@+id/imgLine"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

    <ImageView
        android:id="@+id/imgline1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"
        app:srcCompat="@drawable/ic_baseline_remove_left_24" />

    <TextView
        android:id="@+id/txtSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Social_media_login"
        android:textColor="@color/blue_7B9CE9"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOr" />

    <ImageButton
        android:id="@+id/imgGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSocial"
        app:srcCompat="@drawable/google"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imgGoogle"
        app:layout_constraintTop_toBottomOf="@+id/txtSocial"
        app:srcCompat="@drawable/facebook"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtDontAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/Dont_have_an_account"
        android:textColor="@color/blue_7B9CE9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGoogle" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/Signup"
        android:textColor="@color/blue_042CE3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtDontAccount"
        app:layout_constraintTop_toBottomOf="@+id/imgFacebook" />

</androidx.constraintlayout.widget.ConstraintLayout>