<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imgWelcomeLogin"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/c4e38e4ea55a9b9c294bf1dc2eb6e141"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello"
        android:textColor="@color/blue_163297"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWelcomeLogin" />

    <TextView
        android:id="@+id/txtTitalDetalUpdate"
        android:layout_width="750px"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/des"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtHello"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/txtHello"
        app:layout_constraintTop_toBottomOf="@+id/txtHello" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="40dp"
        android:layout_width="700px"
        android:layout_height="130px"
        android:backgroundTint="@color/blue_042CE3"
        android:hapticFeedbackEnabled="false"
        android:text="@string/Login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtTitalDetalUpdate"
        app:layout_constraintStart_toStartOf="@+id/txtTitalDetalUpdate"
        app:layout_constraintTop_toBottomOf="@+id/txtTitalDetalUpdate" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="700px"
        android:layout_height="130px"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:hapticFeedbackEnabled="false"
        android:text="@string/SignUp"
        android:textColor="@color/blue_042CE3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:strokeColor="@color/blue_042CE3"
        app:strokeWidth="?android:attr/buttonCornerRadius"
        tools:targetApi="p" />

</androidx.constraintlayout.widget.ConstraintLayout>